# KEY-Sugarcane-Image-Classifier

./: .gitignore  README.md  cnn-results.csv  group4-model1-predictions.csv  group4-model2-predictions.csv  main.ipynb  method1-results-ALL.csv  method2-results-ALL.csv  method2-results.csv  model_demo.ipynb  model_demo.py  model_training.ipynb  pyproject.toml
web_app/staticfiles/: staticfiles.json
web_app/web/: api.py  urls.py  views.py
web_app/web/static_src/: package-lock.json  package.json
web_app/web/templates/: qme.html
web_app/web_app/: asgi.py  settings.py  urls.py  wsgi.py
